css/mainstyle.css
body,
html {
    padding: 0;
    margin: 0;
}

section {
    min-height: 100vh;
    padding-top: 2em;
    padding-bottom: 2em;
    scroll-padding-top: 2em;
}

h1 {
    font-size: 5em;
    font-family: 'Times New Roman', Times, serif;
}

.container-fluid {
    display: grid;
    place-items: center;
}

.navmain .container-fluid #navbarSupportedContent ul li a.active {
    background-color: rgb(150, 96, 66);
    border-radius: 30%;
}

.navbar {
    background-color: #9CAFAA;
    box-shadow: 1px 0px 5px black;
}

.navbar-toggler {
    /* border: 2px solid black !important;
    border-radius: 10px !important; */
    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba(251, 243, 213, 0.75)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/></svg>");
    /* linear-gradient(rgb(251, 243, 213), rgb(251, 243, 213)); */
    --bs-border-width: 3px;
    --bs-navbar-color: rgb(251, 243, 213);
    --bs-navbar-toggler-border-color: rgb(251, 243, 213)
}


.nav-social .nav-item {
    padding-top: 1em;
}

.nav-link {
    --bs-navbar-active-color: rgb(251, 243, 213);
}

.nav-item path,
.navmain path {
    fill: #9CAFAA;
}

.dropdown-toggle {
    cursor: pointer;
}

.dropdown-toggle path,
.navbar-brand path {
    fill: rgb(251, 243, 213);
}

.dropdown-menu {
    border: none !important;
    background: transparent !important;
    min-width: fit-content !important;
}

.dropdown-menu ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

/* .navbar-toggler-icon{
    color: rgb(251, 243, 213);
} */

/* Banner / Carousel */
.carousel-item {
    aspect-ratio: 16/9;
}

.carousel-inner {
    height: fit-content;
    max-height: 100vh;
}

.carousel-inner img {
    object-fit: cover;
}

.carousel-item:nth-child(1) img {
    object-position: bottom center;
}

.carousel-item:nth-child(2) img,
.carousel-item:nth-child(3) img {
    object-position: center center;
}

/* Phylosophie Section */
#Phylosophie {
    background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../img/fb-image.jpg');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

#Phylosophie h1 {
    color: rgb(251, 243, 213);
    text-shadow: 1px 2px 5px black;
}

.phy-container {
    border-radius: 10px;
    padding: 1em 2em;
    background-color: rgba(251, 243, 213, 0.5);
    border: 1px solid white;
    height: 100%;
}

.phy-container img {
    width: 50%;
}

/* Phylosophie Section */

/* Bio Section */

#Bio {
    background-color: rgb(239, 188, 155)
}

.bio-img-container {
    padding: 1em;
    background-color: #ddc;
    border: solid 1em;
    border-bottom-color: #eee;
    border-left-color: #ddd;
    border-radius: 0.25em;
    border-right-color: #ddd;
    border-top-color: #ccc;
    /* box-shadow: 0 0 0.5em 0 rgba(251, 243, 213, .5) inset, 0 0.25em 0.5em 0.25em rgba(251, 243, 213, .5); */
    box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, .5) inset, 0 0.25em 0.5em 0.25em rgba(251, 243, 213, .5);
}

.bio-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
    border: solid 1em;
    border-bottom-color: #ffe;
    border-left-color: #eed;
    border-right-color: #eed;
    border-top-color: #ccb;
    user-select: none;
    min-height: 300px;
}

.bio-text {
    border-radius: 10px;
    padding: 1em 2em;
    background-color: rgba(251, 243, 213, 0.5);
    border: 1px solid white;
    box-shadow: 0px 2px 5px black;
}

.bio-text::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

.bio-text::-webkit-scrollbar-track {
    border-radius: 10px;
}

.bio-text::-webkit-scrollbar-thumb {
    border-radius: 10px;
    border-left: 2px solid rgba(0, 0, 0, 0.5);
}

.bio-text::-webkit-scrollbar-corner {
    background-color: transparent;
}

/* Bio Section */

/* Info Section */
#Info {
    color: rgb(251, 243, 213);
    text-shadow: 1px 2px 5px black;
    /* background-color: rgb(0, 14, 94); */
    background-color: rgb(0, 9, 59);
}

#Info .info-text {
    background-color: rgba(255, 255, 255, 0.5);
    padding: 3em;
    transform-style: preserve-3d;
    transform: perspective(200px) rotateX(15deg);
    border: solid 1em;
    border-bottom-color: rgba(255, 255, 255, 0.7);
    border-left-color: rgba(255, 255, 255, 0.9);
    border-right-color: rgba(255, 255, 255, 0.9);
    border-top-color: rgba(255, 255, 255, 0.9);
    box-shadow: 0 0 2em 0 rgba(0, 0, 0, .75), 0 0.5em 1em 0.5em rgba(251, 243, 213, .5) inset;

    animation-name: turnBackSign;
    animation-duration: 1s;
    animation-fill-mode: both;
    /* transition: transform 2s ease-in-out; */
}

#Info .info-text:hover {
    /* transform-style: preserve-3d;
    transform: perspective(200px) rotateX(0deg); */
    animation-name: turnSign;
    animation-duration: 1s;
    animation-fill-mode: both;
}

@keyframes turnSign {
    from {
        transform: perspective(200px) rotateX(15deg);
    }

    to {
        transform: perspective(200px) rotateX(0deg);
    }
}

@keyframes turnBackSign {
    to {
        transform: perspective(200px) rotateX(15deg);
    }

    from {
        transform: perspective(200px) rotateX(0deg);
    }
}

#Info img {
    border-top-left-radius: 50% 50%;
    border-top-right-radius: 50% 50%;
    width: 100%;
    height: 100%;
    box-shadow: 0em 0.5em 5em rgb(0, 38, 255, 0.85);
    position: relative;
}

#Info .info-img-sports,
.info-img-musics {
    padding: 0.5em 0.5em 0.25em 0.5em;
    background: linear-gradient(#000524, #000a4d 90%, #0026ff);
    /* background: linear-gradient(#e66465, #9198e5); */
    border: solid 1em;
    border-top-left-radius: 50% 50%;
    border-top-right-radius: 50% 50%;
    border-bottom-color: rgb(0, 21, 139);
    border-left-color: rgb(0, 10, 77);
    border-right-color: rgb(0, 10, 77);
    border-top-color: rgb(0, 8, 61);
    /* box-shadow: 0 0 0.5em 0 rgba(251, 243, 213, .5) inset, 0 0.25em 0.5em 0.25em rgba(251, 243, 213, .5); */
    box-shadow: 0 0em 0em 1em rgba(0, 8, 61, 0.85) inset;
}

#Info .info-img-games {
    padding: 0.5em 0.5em 0 0.5em;
    /* background: linear-gradient( #000524,#000e5e ); */
    /* background: linear-gradient(#e66465, #9198e5); */
    border: solid 1em;
    border-bottom-color: rgb(0, 21, 139);
    border-left-color: rgb(0, 10, 77);
    border-right-color: rgb(0, 10, 77);
    border-top-color: rgb(0, 8, 61);
    /* box-shadow: 0 0 0.5em 0 rgba(251, 243, 213, .5) inset, 0 0.25em 0.5em 0.25em rgba(251, 243, 213, .5); */
    box-shadow: 0 0em 0em 1em rgba(0, 10, 77, .75) inset;
}

/* Info Section */

/* Story Section */
#Story {
    background-image: linear-gradient(rgb(255, 255, 255, 0.75), rgb(255, 255, 255, 0.75)), url("../img/altenative-image.jpg");
    /* background-color: rgb(239, 188, 155); */
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

#Story .iframe-holder {
    box-shadow: 0 1em 1em black;
}

#Story iframe {
    /* min-width: 0 !important; */
    width: fit-content;
    min-height: fit-content;
}

/* Story Section */

/* Footer */
footer {
    background-color: #9CAFAA;
    box-shadow: 0 0 1em black;
}

/* Footer */

/* Media Queries */
/* XS */
@media (max-width: 575px) {
    .bio-img-container, .bio-img-container img{
        border-width: 0.5em;
    }

    .bio-img-container{
        padding: 0.5em;
    }
}

/* SM */
@media (min-width: 576px) and (max-width: 767px) {}

/* MD */
@media (min-width: 768px) and (max-width: 991px) {}

/* LG */
@media (min-width: 992px) and (max-width: 1199px) {}

/* XL */
@media (min-width: 1200px) {}

@media (max-width: 1199px) {}

/* Touch */
@media (max-width: 767px) {
    .carousel-item {
        aspect-ratio: 3/4;
    }

    .bio-text {
        padding: 0.5em 1em;
        font-size: 0.85rem;
    }

    h1 {
        font-size: 2rem;
    }

    h3{
        font-size: 1rem;
    }

    .nav-item path {
        fill: rgb(251, 243, 213);
    }

    .info-text{
        padding: 1em;
    }
}

